@@ -1,19 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST sphinxcontrib-httpdomain-1.0.tar.gz 5874 RMD160 3302f10323c75e282eacac530ec4bce27d9e33f2 SHA1 52f5bd3fce9a141361bf5146563a3ac1bde6e3ff SHA256 ad7d03363570cd23726004f0985e8cbee230b14aa9c2195ce68b4e32b7fa07aa
 DIST sphinxcontrib-httpdomain-1.1.2.tar.gz 6873 RMD160 e5ba9d2cdbbedf663241db14c4355c8602cca387 SHA1 56e1e42c887ed5d80c2a9b1e4b043dd19db0c288 SHA256 97ad05755192afe236dfbfc626d6363033d3d3a756364d77d08c2bf7a69dfcc2
 DIST sphinxcontrib-httpdomain-1.1.4.tar.gz 6899 RMD160 d224d90286cf7dddec7a6c3ee87a4e3c7a8150e8 SHA1 ceeb8e81b59303d47b3dc40c73acd1618686c3c9 SHA256 5950c776696bd5c14efa953441a3c96472119640c918b6ec4e934f4de0ee7d67
-EBUILD sphinxcontrib-httpdomain-1.0.ebuild 677 RMD160 e0b18ae221de73058d096b92bfad1c0a96be5cff SHA1 857dd265eede3a64cfb104352716f1ab33753dda SHA256 7b6f78d496f5d615538d121b117721d631ccb2e4ea8a628fbc486c9bed0a4819
-EBUILD sphinxcontrib-httpdomain-1.1.2.ebuild 640 RMD160 edcccacbe473317fd8e7414bd1c4fa7b8bc25102 SHA1 385379488617702cfef47e3fc58916a590b15c27 SHA256 1bf77a39a1cb5b6a8b9b7d7cb08b6db98b783c14a44df274d0eddfc5e0d4b0c6
+EBUILD sphinxcontrib-httpdomain-1.1.2.ebuild 639 RMD160 b3a993f3463c4861dd15d22aedd3fe704dec1105 SHA1 6230151ab08b12f34fffd44eb35ba4e10b4c5384 SHA256 d008efa91145cf6fe8235436ae86a67a7e13c662634440469dae7b3d2b35ed21
 EBUILD sphinxcontrib-httpdomain-1.1.4.ebuild 641 RMD160 8aa7f94b2a3893be90126e619f0d8032fe81ed7a SHA1 cef49237cbbc1208682c3d4175122771576cf014 SHA256 758a12d90cfc047677f44b21551053094084b08c6806e826a16f4e20a4cd4d23
-MISC ChangeLog 1162 RMD160 d0505cb2036ea3fa257f08b8123ffd821e67b93a SHA1 3fc10acdebb924e8f368395f4ca88afd461a8236 SHA256 94ced73eab28f052b5a021013179491a31498ebeeee26298a199633293492cb3
+MISC ChangeLog 1304 RMD160 ac38e8e0bd4c7a1e07462dddbbccc3b2bfaede82 SHA1 0865252f30b1a9c2284fe631d1b96f0a9c0fa808 SHA256 3a6ec521e9d00f15bdb391457e69a212539508e67e0491cf1cded6d3c64a1768
 MISC metadata.xml 702 RMD160 e0ab3bac531018b4b5cfb5d7d0da023a2224dfac SHA1 21135cb889825381cde64104e42af1394cc1defa SHA256 22b33253e42971dd67a36bc49e4ab2025d543a27d72400150c1f1b8cf7543d6c
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4Vjo8ACgkQzJrj3cAXR0kA3QCdENlbaEaSw3nEhIOTKwgJsY4Y
-JG4An0l8E8mKwycni+kKv7duHWLy/MXb
-=AreF
+iEYEAREKAAYFAk4Vs0kACgkQzJrj3cAXR0mZLwCaAt0NqdaFZ0Nngpf56tsbPxEy
+L6MAnj4rHoiQgUzmXQOMP/pPHUtMMqkv
+=YR5K
 -----END PGP SIGNATURE-----
