@@ -14,7 +14,7 @@ HOMEPAGE="http://packages.python.org/sphinxcontrib-httpdomain/"
 
 LICENSE="BSD-2"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-python/setuptools"
