@@ -47,8 +47,7 @@
  * Licence: ``BSD-2``
  * Versions:
 
-  * `1.0 <https://github.com/JNRowe/misc-overlay/blob/master/app-text/sphinxcontrib-httpdomain/sphinxcontrib-httpdomain-1.0.ebuild>`__  ``amd64``, ``~x86`` (indefinite)
-  * `1.1.2 <https://github.com/JNRowe/misc-overlay/blob/master/app-text/sphinxcontrib-httpdomain/sphinxcontrib-httpdomain-1.1.2.ebuild>`__  ``amd64``, ``~x86`` (due 2011-07-07)
+  * `1.1.2 <https://github.com/JNRowe/misc-overlay/blob/master/app-text/sphinxcontrib-httpdomain/sphinxcontrib-httpdomain-1.1.2.ebuild>`__  ``amd64``, ``x86``
   * `1.1.4 <https://github.com/JNRowe/misc-overlay/blob/master/app-text/sphinxcontrib-httpdomain/sphinxcontrib-httpdomain-1.1.4.ebuild>`__  ``~amd64`` (due 2011-07-22), ``~x86`` (due 2011-07-22)
 
 * ``sphinxcontrib-issuetracker`` - http://packages.python.org/sphinxcontrib-issuetracker/
