@@ -6,7 +6,7 @@ mirror://pypi/s/sphinxcontrib-httpdomain/sphinxcontrib-httpdomain-1.1.2.tar.gz
 http://packages.python.org/sphinxcontrib-httpdomain/
 BSD-2
 dev-python/sphinx extension to document HTTP APIs
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
