@@ -1,4 +1,3 @@
-* app-text/sphinxcontrib-httpdomain-1.1.2     x86 SCHEDULED: <2011-07-07 Thu>
 * app-misc/weatherspect-1.9                   x86 SCHEDULED: <2011-07-07 Thu>
 * app-text/sphinxcontrib-httpdomain-1.1.2     x86 SCHEDULED: <2011-07-12 Tue>
 * dev-python/attest-0.5.2                   amd64 SCHEDULED: <2011-07-22 Fri>
